refactor agent background llm to langchain4j